fix: update styles so that the border covers all the available width
Close #5

--- a/src/main/resources/META-INF/frontend/fcEnhancedTabs/vaadin-menu-bar-button-legacy.css
+++ b/src/main/resources/META-INF/frontend/fcEnhancedTabs/vaadin-menu-bar-button-legacy.css
@@ -21,7 +21,7 @@
 
 :host([theme~='fc-enhanced-tabs']) {
   background: transparent;
-  box-shadow: inset 0 -1px 0 0 var(--lumo-contrast-10pct);
+  box-shadow: none;
 }
 
 :host([theme~='fc-enhanced-tabs'])::before {
